Add sections and headings

--- a/index.html
+++ b/index.html
@@ -4,6 +4,31 @@
         <title></title>
     </head>
     <body>
-        
+        <nav>
+            <ul>
+                <li>SETTINGS</li>
+                <li>GISTS</li>
+                <li>STACK OVERFLOW</li>
+                <li>TRENDING</li>
+                <li>SCRATCHPAD</li>
+                <li>PLAYGROUND</li>
+                <li>HELP/INTRO</li>
+            </ul>
+        </nav>
+        <main>
+            <section class="history">
+                <h1>RELEVANT JAVASCRIPT HISTORY</h1>
+            </section>
+            <section class="clock">
+                <span id="time"></span>
+                <span id="date"></span>
+            </section>
+            <section class="reddit">
+                <h1>POPULAR ON R/JAVASCRIPT</h1>
+            </section>
+            <section class="github">
+                <h1>GITHUB ISSUES HISTORY</h1>
+            </section>
+        </main>
     </body>
 </html>
