Add font awesome icons to navbar

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <body>
         <nav>
             <ul>
-                <li>SETTINGS</li>
-                <li>GISTS</li>
-                <li>STACK OVERFLOW</li>
-                <li>TRENDING</li>
-                <li>SCRATCHPAD</li>
-                <li>PLAYGROUND</li>
-                <li>HELP/INTRO</li>
+                <li><i class="fas fa-wrench"></i> SETTINGS</li>
+                <li><i class="fas fa-code"></i> GISTS</li>
+                <li><i class="fab fa-stack-overflow"></i> STACK OVERFLOW</li>
+                <li><i class="fas fa-chart-line"></i> TRENDING</li>
+                <li><i class="fas fa-pencil-alt"></i> SCRATCHPAD</li>
+                <li><i class="far fa-lightbulb"></i> PLAYGROUND</li>
+                <li><i class="fas fa-question"></i> HELP/INTRO</li>
             </ul>
         </nav>
         <main>
@@ -30,5 +30,6 @@
                 <h1>GITHUB ISSUES HISTORY</h1>
             </section>
         </main>
+        <script defer src="https://use.fontawesome.com/releases/v5.8.2/js/all.js" integrity="sha384-DJ25uNYET2XCl5ZF++U8eNxPWqcKohUUBUpKGlNLMchM7q4Wjg2CUpjHLaL8yYPH" crossorigin="anonymous"></script>
     </body>
 </html>
