Add logo & social media icons

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title></title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <nav>
@@ -13,6 +14,13 @@
                 <li><i class="fas fa-pencil-alt"></i> SCRATCHPAD</li>
                 <li><i class="far fa-lightbulb"></i> PLAYGROUND</li>
                 <li><i class="fas fa-question"></i> HELP/INTRO</li>
+            </ul>
+            <img src="initab_logo.png" alt="">
+            <ul>
+                <li><i class="fab fa-facebook"></i></li>
+                <li><i class="fab fa-linkedin"></i></li>
+                <li><i class="fab fa-twitter-square"></i></li>
+                <li><i class="fab fa-reddit"></i></li>
             </ul>
         </nav>
         <main>
