Update navigation colors and links

--- a/index.html
+++ b/index.html
@@ -9,20 +9,22 @@
         <nav>
             <ul class="navigation">
                 <li><i class="fas fa-wrench" style="background: #87E1F5; padding: 2px;"></i> <span style="color: #87E1F5;">SETTINGS</span></li>
-                <li><i class="fas fa-code"></i> GISTS</li>
-                <li><i class="fab fa-stack-overflow"></i> STACK OVERFLOW</li>
-                <li><i class="fas fa-chart-line"></i> TRENDING</li>
-                <li><i class="fas fa-pencil-alt"></i> SCRATCHPAD</li>
-                <li><i class="far fa-lightbulb"></i> PLAYGROUND</li>
-                <li><i class="fas fa-question"></i> HELP/INTRO</li>
+                <li><i class="fas fa-code" style="background: #70EC7B; padding: 2px;"></i> <span style="color: #70EC7B;">GISTS</span></li>
+                <li><i class="fab fa-stack-overflow" style="background: #FFBC6C; padding: 2px;"></i> <span style="color: #FFBC6C;">STACK OVERFLOW</span></li>
+                <li><i class="fas fa-chart-line" style="background: #D06DB2; padding: 2px;"></i> <span style="color: #D06DB2;">TRENDING</span></li>
+                <li><i class="fas fa-pencil-alt" style="background: #BC93FA; padding: 2px;"></i> <span style="color: #BC93FA;">SCRATCHPAD</span></li>
+                <li><i class="far fa-lightbulb" style="background: #F8F8F2; padding: 2px;"></i> <span style="color: #F8F8F2;">PLAYGROUND</span> <i class="fas fa-lock" style="color: #F8F8F2; padding: 2px;"></i></li>
+                <li><i class="fas fa-question" style="background: #E5DB74; padding: 2px;"></i> <span style="color: #E5DB74;">HELP/INTRO</span></li>
             </ul>
             <div class="wrapper">
+            <figure>
             <img src="initab_logo.png" alt="logo">
+            </figure>
             <ul class="social">
-                <li><i class="fab fa-facebook"></i></li>
-                <li><i class="fab fa-linkedin"></i></li>
-                <li><i class="fab fa-twitter-square"></i></li>
-                <li><i class="fab fa-reddit"></i></li>
+                <li><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                <li><a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+                <li><a href="https://twitter.com/LishiTrinity" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
+                <li><a href="https://www.reddit.com/" target="_blank"><i class="fab fa-reddit"></i></a></li>
             </ul>
             </div>
         </nav>
@@ -33,16 +35,16 @@
                 <span id="date"></span>
             </section>
             <section class="history">
-                <h1>RELEVANT JAVASCRIPT HISTORY</h1>
+                <h1><i class="far fa-clock"></i> RELEVANT JAVASCRIPT HISTORY</h1>
                 <p>lorem</p>
             </section>
             <section class="reddit">
-                <h1>POPULAR ON R/JAVASCRIPT</h1>
+                <h1><i class="fab fa-reddit-alien"></i> POPULAR ON R/JAVASCRIPT</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae obcaecati nulla sapiente repellendus asperiores aspernatur, necessitatibus sequi neque, voluptates, numquam explicabo voluptatem nobis recusandae illo inventore corporis adipisci ex natus!</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi velit excepturi atque eveniet, eligendi voluptatibus animi tempore molestiae blanditiis tempora dolore quaerat culpa voluptas labore ea illum, vero, maxime possimus?</p>
             </section>
             <section class="github">
-                <h1>GITHUB ISSUES HISTORY</h1>
+                <h1><i class="fab fa-github-alt"></i> GITHUB ISSUES HISTORY</h1>
             </section>
         </main>
         <script defer src="https://use.fontawesome.com/releases/v5.8.2/js/all.js" integrity="sha384-DJ25uNYET2XCl5ZF++U8eNxPWqcKohUUBUpKGlNLMchM7q4Wjg2CUpjHLaL8yYPH" crossorigin="anonymous"></script>
