--- a/index.html
+++ b/index.html
@@ -40,11 +40,31 @@
             </section>
             <section class="reddit">
                 <h1><i class="fab fa-reddit-alien"></i> POPULAR ON R/JAVASCRIPT</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae obcaecati nulla sapiente repellendus asperiores aspernatur, necessitatibus sequi neque, voluptates, numquam explicabo voluptatem nobis recusandae illo inventore corporis adipisci ex natus!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi velit excepturi atque eveniet, eligendi voluptatibus animi tempore molestiae blanditiis tempora dolore quaerat culpa voluptas labore ea illum, vero, maxime possimus?</p>
+                <article>
+                    <p>The revolutionary project management tool is here and it's visual. Start Your Free Trial Now.</p>
+                    <p class="yellow-text">Start Free Trial</p>
+                    <p class="pink-text">Sponsored by monday</p>
+                </article>
+                <article>
+                    <p>A teacher at my school was sick of remembering all the different bell schedules, so I created an app to make things easier. The whole school loves it.</p>
+                    <p class="yellow-text">Posted by: u/scheduled_nightmare</p>
+                    <a href="#" class="pink-text">Link to Comments</a>
+                </article>
+                <article>
+                    <p>Autoslap - a Node CLI tool that automatically installs and configures ESLint, Prettier, Husky and lint-staged</p>
+                    <p class="yellow-text">Posted by: u/paolostyle</p>
+                    <a href="#" class="pink-text">Link to Comments</a>
+                </article>
+                <article>
+                    <p>What's the most dirty thing you've had to work with in code and how did you solve them?</p>
+                    <p class="yellow-text">Posted by: u/SleepingAriadne</p>
+                    <a href="#" class="pink-text">Link to Comments</a>
+                </article>
             </section>
             <section class="github">
                 <h1><i class="fab fa-github-alt"></i> GITHUB ISSUES HISTORY</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum deleniti pariatur consequatur, doloremque incidunt corporis sequi ab, consectetur sed iure maxime tempore magni blanditiis nobis corrupti nesciunt illo rem officiis?</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem, fugit nisi amet voluptas qui saepe porro. Autem culpa consectetur, laborum minus nostrum animi quia, repudiandae voluptatibus iste vitae dolor deleniti?</p>
             </section>
         </main>
         <script defer src="https://use.fontawesome.com/releases/v5.8.2/js/all.js" integrity="sha384-DJ25uNYET2XCl5ZF++U8eNxPWqcKohUUBUpKGlNLMchM7q4Wjg2CUpjHLaL8yYPH" crossorigin="anonymous"></script>
