Add github section text

--- a/index.html
+++ b/index.html
@@ -36,35 +36,67 @@
             </section>
             <section class="history">
                 <h1><i class="far fa-clock"></i> RELEVANT JAVASCRIPT HISTORY</h1>
-                <p>lorem</p>
+                <p>lorem ipsum dolor sit amet</p>
+                <p>lorem ipsum dolor sit amet</p>
+                <p>lorem ipsum dolor sit amet</p>
+                <p>lorem ipsum dolor sit amet</p>
+                <p>lorem ipsum dolor sit amet</p>
+                <p>lorem ipsum dolor sit amet</p>
+                <p>lorem ipsum dolor sit amet</p>
             </section>
             <section class="reddit">
                 <h1><i class="fab fa-reddit-alien"></i> POPULAR ON R/JAVASCRIPT</h1>
                 <article>
-                    <p>The revolutionary project management tool is here and it's visual. Start Your Free Trial Now.</p>
+                    <p class="white-text">The revolutionary project management tool is here and it's visual. Start Your Free Trial Now.</p>
                     <p class="yellow-text">Start Free Trial</p>
                     <p class="pink-text">Sponsored by monday</p>
                 </article>
                 <article>
-                    <p>A teacher at my school was sick of remembering all the different bell schedules, so I created an app to make things easier. The whole school loves it.</p>
+                    <p class="white-text">A teacher at my school was sick of remembering all the different bell schedules, so I created an app to make things easier. The whole school loves it.</p>
                     <p class="yellow-text">Posted by: u/scheduled_nightmare</p>
+                    <p>Reddit Score: 259</p>
                     <a href="#" class="pink-text">Link to Comments</a>
                 </article>
                 <article>
-                    <p>Autoslap - a Node CLI tool that automatically installs and configures ESLint, Prettier, Husky and lint-staged</p>
+                    <p class="white-text">Autoslap - a Node CLI tool that automatically installs and configures ESLint, Prettier, Husky and lint-staged</p>
                     <p class="yellow-text">Posted by: u/paolostyle</p>
+                    <p>Reddit Score: 13</p>
                     <a href="#" class="pink-text">Link to Comments</a>
                 </article>
                 <article>
-                    <p>What's the most dirty thing you've had to work with in code and how did you solve them?</p>
+                    <p class="white-text">What's the most dirty thing you've had to work with in code and how did you solve them?</p>
                     <p class="yellow-text">Posted by: u/SleepingAriadne</p>
+                    <p>Reddit Score: 156</p>
                     <a href="#" class="pink-text">Link to Comments</a>
                 </article>
             </section>
             <section class="github">
                 <h1><i class="fab fa-github-alt"></i> GITHUB ISSUES HISTORY</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum deleniti pariatur consequatur, doloremque incidunt corporis sequi ab, consectetur sed iure maxime tempore magni blanditiis nobis corrupti nesciunt illo rem officiis?</p>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem, fugit nisi amet voluptas qui saepe porro. Autem culpa consectetur, laborum minus nostrum animi quia, repudiandae voluptatibus iste vitae dolor deleniti?</p>
+                <p>switch to gitlab</p>
+                <section class="sub-heading">
+                    <h3 class="yellow-text">ISSUES</h3>
+                    <h3 class="pink-text">PULL REQUESTS</h3>
+                </section>
+                <article>
+                    <p>Repo: GoogleChrome/puppeteer</p>
+                    <p class="yellow-text">Issue #1341</p>
+                    <p class="white-text">How to get the inner text of elements from the return values of page. $$</p>
+                </article>
+                <article>
+                    <p>Repo: GoogleChrome/puppeteer</p>
+                    <p class="yellow-text">Issue #3051</p>
+                    <p class="white-text">How to get text from a element ?</p>
+                </article>
+                <article>
+                    <p>Repo: apollographql/graphql-tag</p>
+                    <p class="yellow-text"> Issue #131</p>
+                    <p class="white-text">Parse variables</p>
+                </article>
+                <article>
+                    <p>Repo: apollographql/apollo-client</p>
+                    <p class="yellow-text">Issue #3967</p>
+                    <p class="white-text">It is not possible to pass Authorization header to WebSocket</p>
+                </article>
             </section>
         </main>
         <script defer src="https://use.fontawesome.com/releases/v5.8.2/js/all.js" integrity="sha384-DJ25uNYET2XCl5ZF++U8eNxPWqcKohUUBUpKGlNLMchM7q4Wjg2CUpjHLaL8yYPH" crossorigin="anonymous"></script>
