--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
             </section>
             <section class="history">
                 <h1><i class="far fa-clock"></i> RELEVANT JAVASCRIPT HISTORY</h1>
-                <p>lorem ipsum dolor sit amet</p>
-                <p>lorem ipsum dolor sit amet</p>
-                <p>lorem ipsum dolor sit amet</p>
-                <p>lorem ipsum dolor sit amet</p>
-                <p>lorem ipsum dolor sit amet</p>
-                <p>lorem ipsum dolor sit amet</p>
-                <p>lorem ipsum dolor sit amet</p>
+                <article><p>lorem ipsum dolor sit amet</p><p class="grey-text">2 days ago</p></article>
+                <article><p>lorem ipsum dolor sit amet</p><p class="grey-text">2 days ago</p></article>
+                <article><p>lorem ipsum dolor sit amet</p><p class="grey-text">2 days ago</p></article>
+                <article><p>lorem ipsum dolor sit amet</p><p class="grey-text">2 days ago</p></article>
+                <article><p>lorem ipsum dolor sit amet</p><p class="grey-text">2 days ago</p></article>
+                <article><p>lorem ipsum dolor sit amet</p><p class="grey-text">2 days ago</p></article>
+                <article><p>lorem ipsum dolor sit amet</p><p class="grey-text">2 days ago</p></article>
             </section>
             <section class="reddit">
                 <h1><i class="fab fa-reddit-alien"></i> POPULAR ON R/JAVASCRIPT</h1>
@@ -72,7 +72,7 @@
             </section>
             <section class="github">
                 <h1><i class="fab fa-github-alt"></i> GITHUB ISSUES HISTORY</h1>
-                <p>switch to gitlab</p>
+                <h5>switch to gitlab</h5>
                 <section class="sub-heading">
                     <h3 class="yellow-text">ISSUES</h3>
                     <h3 class="pink-text">PULL REQUESTS</h3>
